# CamCalib

./: .gitignore  CMakeLists.txt
app/: main.cpp
config/: calib_config.yaml
include/core/: CalibrationData.h
include/imageProcess/: CannyDetecter.h  EdgeProcessing.h  ImageLoader.h  ImageProcess.h
include/solver/: ClosedFormSolver.h  Homography.h
include/utils/: Config.h  Reprojection.h  ResultIO.h
src/imageProcess/: CannyDetecter.cpp  EdgeProcessing.cpp  ImageLoader.cpp  ImageProcess.cpp
src/solver/: ClosedFormSolver.cpp  Homography.cpp
src/utils/: Config.cpp  Reprojection.cpp  ResultIO.cpp
